Bug 365101 - Last column of lap view not stretched
Summary: Last column of lap view not stretched
Status: RESOLVED FIXED
Alias: None
Product: kronometer
Classification: Applications
Component: general (other bugs)
Version First Reported In: unspecified
Platform: Other Linux
: NOR normal
Target Milestone: ---
Assignee: Elvis Angelaccio
URL: http://i.imgur.com/ciqfMsZ.png
Keywords:
Depends on:
Blocks:
 
Reported: 2016-07-05 11:22 UTC by Elvis Angelaccio
Modified: 2016-07-05 14:03 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In: 2.1.1
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Elvis Angelaccio 2016-07-05 11:22:08 UTC
See attached screenshot.
The bug cannot be reproduced on Kubuntu 16.04 with Qt 5.5, so this looks like either a regression or a behavior change in Qt 5.6/5.7.

Reproducible: Always
Comment 1 Elvis Angelaccio 2016-07-05 14:03:52 UTC
Git commit d3e7b682183ce28239ca2dc419c455cfdc0f664a by Elvis Angelaccio.
Committed on 05/07/2016 at 13:59.
Pushed by elvisangelaccio into branch '2.1'.

Fix lap-view's last column on Qt > 5.5

Something changed in Qt 5.7 (or possibly Qt 5.6), resulting in an ugly
non-stretched last column in the lap view. This used to work fine with Qt <=
5.5.

This patch fixes this issue and doesn't seem to introduce regressions (tested
with Qt 5.7 and Qt 5.5)
FIXED-IN: 2.1.1

M  +0    -1    src/mainwindow.cpp

http://commits.kde.org/kronometer/d3e7b682183ce28239ca2dc419c455cfdc0f664a