Fix lap-view's last column on Qt > 5.5

Something changed in Qt 5.7 (or possibly Qt 5.6), resulting in an ugly
non-stretched last column in the lap view. This used to work fine with Qt <=
5.5.

This patch fixes this issue and doesn't seem to introduce regressions (tested
with Qt 5.7 and Qt 5.5)

BUG: 365101
FIXED-IN: 2.1.1